<resources>
    <string name="app_name">InmoApp</string>
    <string name="title_activity_dashboard">InmoApp</string>
    <string name="title_home">Home</string>
    <string name="title_favs">Favourites</string>
    <string name="title_mylist">My Properties</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="userId">userId</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tvGoSignUp">Don\'t have an account?</string>

    <!-- PROPERTIES LIST -->

    <string name="list_title">Title</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="city">City</string>
    <string name="province">Province</string>

    <!-- DIALOGS -->
    <string name="title_add">WARNING</string>
    <string name="message_add">You have to log in! Shall we go to the Login Page?</string>
    <string name="message_logout">This action will close your session. Continue?</string>
    <string name="go">Go</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="message_delete">This property will be deleted, are you sure?</string>

    <!--Geography-->
    <string name="ready_bt_label">Ready</string>
    <string name="region_dialog">Region: </string>
    <string name="province_dialog">Province: </string>
    <string name="city_dialog">City: </string>


    <!-- ADD PROPERTY -->
    <string name="title_prop">Title</string>
    <string name="description_prop">Description</string>
    <string name="price_prop">Price</string>
    <string name="size_prop">Size</string>
    <string name="rooms_prop">Rooms</string>
    <string name="zipcode_prop">ZIP Code</string>
    <string name="address_prop">Street Name, Number</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="category_prop">Category</string>
    <string name="title_activity_maps">Map</string>
</resources>
