<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favs"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favs" />

    <item
        android:id="@+id/navigation_mylist"
        android:icon="@drawable/ic_mylist"
        android:title="@string/title_mylist" />

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_login"
        android:title="@string/title_login" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_login"
        android:title="@string/title_logout" />

</menu>
